--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@ build/
 out
 gen
 .mvn
+
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
